--- a/FullStackTestAutomation/.classpath
+++ b/FullStackTestAutomation/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ExtentReports2.41.2"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/CommonsIO2.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Sikuli1.1.3"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Appium"/>
 	<classpathentry kind="src" path="Infrastructure"/>
 	<classpathentry kind="src" path="TestCases"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
