--- a/FullStackTestAutomation/.classpath
+++ b/FullStackTestAutomation/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Sikuli1.1.3"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/RestAssured3.3.0"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Selenium3.141.59"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Winium0.2.0"/>
 	<classpathentry kind="src" path="Infrastructure"/>
 	<classpathentry kind="src" path="TestCases"/>
 	<classpathentry kind="lib" path="C:/Automation/RestAssured3.3.0/json-simple-1.1.1.jar"/>
